two characters facing each other

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
   <body>
     <section id='container'>
-      <div class='captain-america'></div>
+      <div class='captain-america-2'></div>
+      <div class='captain-america-3'></div>
     </section>
 
     <script src='javascripts/jquery-2.1.4.min.js'></script>
